[package]
name = "untitled-game-project"
version = "0.1.0"
description = "A web game collaboration between [@GreySqwrl](https://github.com/GreySqwrl) and [@mysterycommand](https://github.com/mysterycommand)"
repository = "git@github.com:kindness-is-the-dankest-meme/untitled-game-project.git"
authors = ["Matt Hayes <matt@mysterycommand.com>", "Ben Pullen"]
license = "(MIT OR Apache-2.0)"
categories = ["untitled", "game", "project"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.22", features = [ "console", "CanvasRenderingContext2d" ] }
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.45"

[profile.release]
# optimize for size
# @see: https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
opt-level = "s"
